Fixed styling issue. Added feed for Blog-posts from Medium. Fixed alignment of social media icons. Did some styling overall.

--- a/style.css
+++ b/style.css
@@ -87,8 +87,8 @@ p {
   width: 18px;
   height: 18px;
   position: absolute;
-  top: 11px;
-  left: 11px;
+  top: 8px;
+  left: 8px;
   z-index: 3;
 }
 
@@ -201,6 +201,7 @@ p {
 .thoughts-heading {
   color: #fff;
   background-color: #1c3312;
+  text-align: center;
 }
 
 .brown {
@@ -268,7 +269,7 @@ p {
 
 .project-subheading {
   color: #fff;
-  font-size: 20px;
+  font-size: 26px;
   text-transform: uppercase;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
@@ -298,7 +299,8 @@ p {
 .project-labels {
   display: flex;
   flex-direction: row;
-  margin-bottom: 63px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 
 .project-labels span {
@@ -307,6 +309,7 @@ p {
   background-color: #835748;
   padding: 0 7px;
   margin-right: 5px;
+  margin-top: 5px;
   border-radius: 5px;
   text-align: center;
 }
@@ -381,22 +384,65 @@ p {
   margin: 15px 0 0 0;
 }
 
-.my-thoughts {
+.my-thoughts-wrapper {
   display: flex;
   justify-content: center;
   padding: 63px 36px;
   background-color: #b2c2a8;
 }
 
-.thoughts-wrapper {
+.my-thoughts {
   display: flex;
   flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  background-color: #b2c2a8;
 }
 
-.thoughts-wrapper img {
-  width: 100%;
-  max-width: 600px;
+.thoughts-text {
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: 600;
+}
+
+/* .my-thoughts-img {
+  width: 50%;
+  max-width: 500px;
   margin-bottom: 15px;
+} */
+
+/*                            STYLING OF IMPORTED BLOG-FEED FROM MEDIUM: */
+/* .col-sm-12 {
+  max-width: 600px;
+} */
+
+.post-title {
+  color: #fff;
+}
+
+.post-title h2::first-letter {
+  text-transform: uppercase;
+}
+
+.post-date,
+.excerpt figure,
+.excerpt figcaption {
+  color: #1d3313;
+  font-family: Roboto, sans-serif;
+}
+
+.excerpt a {
+  color:#1d3313;
+}
+
+.author.mt-2,
+.read-more a {
+  font-family: Roboto, sans-serif;
+  color: #1d3313;
+}
+
+.read-more {
+  margin-top: 15px;
 }
 
 .for-more {
@@ -549,8 +595,8 @@ footer a {
   .header-icon {
     width: 24px;
     height: 24px;
-    top: 13px;
-    left: 13px;
+    top: 11px;
+    left: 11px;
   }
 
   .header-text {
@@ -580,20 +626,24 @@ footer a {
   
   .project-section {
     width: 45%;
+    height: 460px;
     margin: auto;
+    margin-bottom: 20px;
   }
 
   .project-subheading {
     font-size: 22px;
+    margin: 15px;
+    /* margin-right: 15px; */
   }
 
   .pizza {
     display: none;
   }
 
-  .project-text p {
-    height: 56px;
-  }
+  /* .project-text p {
+    height: 110px;
+  } */
 
   .other-pizza {
     display: block;
@@ -621,6 +671,10 @@ footer a {
   .icons-bottom p, 
   footer p {
     font-size: 18px;
+  }
+
+  .project-section {
+    height: 490px;
   }
 
   .project labels span {
@@ -662,6 +716,10 @@ footer a {
 }
 
 @media(min-width:1400px) {
+  .project-subheading { 
+    font-size: 30px;
+  }
+
   .summary-section {
     padding: 140px 120px 120px 120px;
   }
@@ -712,8 +770,8 @@ footer a {
   .header-icon {
     width: 36px;
     height: 36px;
-    top: 17px;
-    left: 17px;
+    top: 15px;
+    left: 15px;
   }
 
   .profilepic {
